--- a/contact.html
+++ b/contact.html
@@ -180,10 +180,10 @@
                   <fieldset>
                   <div class="row">
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                      <input class="field_custom" placeholder="Websire URL" type="text">
+                      <input class="field_custom" placeholder="First name" type="text">
                     </div>
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                      <input class="field_custom" placeholder="Your name" type="text">
+                      <input class="field_custom" placeholder="Last name" type="text">
                     </div>
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
                       <input class="field_custom" placeholder="Email adress" type="email">
