--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="full">
             <div class="topbar-left">
               <ul class="list-inline">
-                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span> <span class="topbar-hightlight">+1234567890</span> </li>
+                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span><a href="tel:+91-1234567890" class="smooth" style="color: white;" title=""><span class="topbar-hightlight">+1234567890</span> </a></li>
                 <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></span> </li>
               </ul>
             </div>
