--- a/about.html
+++ b/about.html
@@ -456,7 +456,7 @@
         <form action="#" method="post">
           <input required type="email">
           <label for="email">Email</label>
-          <input class="submit" type="submit" value="">
+          <input class="submit" type="submit" value=""><i class="fas fa-arrow-right" style="color: white;"></i>
         </form>
       </div>
       <div class="row">
