--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
