--- a/service_detail.html
+++ b/service_detail.html
@@ -87,9 +87,9 @@
           <div class="menu_side">
             <div id="navbar_menu">
               <ul class="first-ul">
-                <li> <a class="active" href="index.html">Home</a></li>
+                <li> <a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li> <a href="service.html">Service</a>
+                <li> <a class="active" href="service.html">Service</a>
                   <ul>
                   <li><a href="service_detail.html">Services Detail</a></li>
                   </ul>
@@ -569,7 +569,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
