--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
           <div class="full">
             <div class="topbar-left">
               <ul class="list-inline">
-                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span><a href="tel:+91-1234567890" class="smooth" style="color: white;" title=""><span class="topbar-hightlight">+1234567890</span> </a></li>
+                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span> <span class="topbar-hightlight">+1234567890</span> </li>
                 <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></span> </li>
               </ul>
             </div>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
           <!-- logo start -->
-          <div class="logo"> <a href="index.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
+          <div class="logo"> <a href="it_home.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
           <!-- logo end -->
         </div>
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -87,12 +87,12 @@
           <div class="menu_side">
             <div id="navbar_menu">
               <ul class="first-ul">
-                <li> <a href="index.html">Home</a></li>
+                <li> <a class="active" href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li> <a class="active" href="service.html">Service</a>
-                  <ul>
+                <li> <a href="service.html">Service</a>
+                  <!-- <ul>
                   <li><a href="service_detail.html">Services Detail</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li> <a href="contact.html">Contact</a></li>
               </ul>
@@ -212,9 +212,9 @@
     <div class="row">
       <div class="col-md-4 service_blog">
         <div class="full">
-          <div class="service_img"> <img class="img-responsive" src="images/it_service/post-01.jpg" alt="#" /> </div>
+          <div class="service_img"> <img class="img-responsive" src="images/ts1.jpg" alt="#" /> </div>
           <div class="service_cont">
-            <h3 class="service_head">Data recovery</h3>
+            <h3 class="service_head">Engine Servicing and Maintenance</h3>
             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             <div class="bt_cont"> <a class="btn sqaure_bt" href="it_service_detail.html">View Service</a> </div>
           </div>
@@ -222,9 +222,9 @@
       </div>
       <div class="col-md-4 service_blog">
         <div class="full">
-          <div class="service_img"> <img class="img-responsive" src="images/it_service/post-02.jpg" alt="#" /> </div>
+          <div class="service_img"> <img class="img-responsive" src="images/tt1.jpg" alt="#" /> </div>
           <div class="service_cont">
-            <h3 class="service_head">Computer repair</h3>
+            <h3 class="service_head">Towing and Transportation</h3>
             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             <div class="bt_cont"> <a class="btn sqaure_bt" href="it_service_detail.html">View Service</a> </div>
           </div>
@@ -232,9 +232,9 @@
       </div>
       <div class="col-md-4 service_blog">
         <div class="full">
-          <div class="service_img"> <img class="img-responsive" src="images/it_service/post-03.jpg" alt="#" /> </div>
+          <div class="service_img"> <img class="img-responsive" src="images/wc1.jpg" alt="#" /> </div>
           <div class="service_cont">
-            <h3 class="service_head">Network solutions</h3>
+            <h3 class="service_head">Washing and Cleaning</h3>
             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             <div class="bt_cont"> <a class="btn sqaure_bt" href="it_service_detail.html">View Service</a> </div>
           </div>
@@ -363,32 +363,29 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="testimonial-container">
-                  <div class="testimonial-content"> You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. 
-                    I am really satisfied with my first laptop service.</div>
+                  <div class="testimonial-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, voluptate in doloremque, ipsa commodi deleniti ipsam voluptatibus aliquid tenetur nulla ratione possimus, dolores sunt quidem exercitationem temporibus distinctio? Quibusdam, architecto.</div>
                   <div class="testimonial-photo"> <img src="images/it_service/client1.jpg" class="img-responsive" alt="#" width="150" height="150"> </div>
                   <div class="testimonial-meta">
-                    <h4>Maria Anderson</h4>
-                    <span class="testimonial-position">CFO, Tech NY</span> </div>
+                    <h4>Client Number 1</h4>
+                    <span class="testimonial-position">Designation of client</span> </div>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="testimonial-container">
-                  <div class="testimonial-content"> You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. 
-                    I am really satisfied with my first laptop service.</div>
+                  <div class="testimonial-content"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur nemo optio ex magnam inventore, quos exercitationem expedita pariatur ullam sequi quasi quaerat porro dolorem magni enim? Error non dolor consequuntur.</div>
                   <div class="testimonial-photo"> <img src="images/it_service/client2.jpg" class="img-responsive" alt="#" width="150" height="150"> </div>
                   <div class="testimonial-meta">
-                    <h4>Maria Anderson</h4>
-                    <span class="testimonial-position">CFO, Tech NY</span> </div>
+                    <h4>Client Number 2</h4>
+                    <span class="testimonial-position">Designation of client</span> </div>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="testimonial-container">
-                  <div class="testimonial-content"> You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. 
-                    I am really satisfied with my first laptop service.</div>
+                  <div class="testimonial-content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti consequatur nihil veritatis non. Aliquam, accusantium nulla. Facilis, quidem, dicta culpa quo distinctio quasi, doloribus ducimus incidunt animi officia in?</div>
                   <div class="testimonial-photo"> <img src="images/it_service/client3.jpg" class="img-responsive" alt="#" width="150" height="150"> </div>
                   <div class="testimonial-meta">
-                    <h4>Maria Anderson</h4>
-                    <span class="testimonial-position">CFO, Tech NY</span> </div>
+                    <h4>Client number 3</h4>
+                    <span class="testimonial-position">Designation of client</span> </div>
                 </div>
               </div>
             </div>
@@ -414,7 +411,7 @@
               <h2>REQUEST A FREE QUOTE</h2>
               <p>Get answers and advice from people you want it from.</p>
             </div>
-            <div class="button_Section_cont"> <a class="btn dark_gray_bt" href="contact.html">Contact us</a> </div>
+            <div class="button_Section_cont"> <a class="btn dark_gray_bt" href="it_contact.html">Contact us</a> </div>
           </div>
         </div>
       </div>
@@ -424,7 +421,7 @@
 <!-- end section -->
 <!-- section -->
 <div class="section padding_layout_1" style="padding: 50px 0;">
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="full">
@@ -438,7 +435,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 <!-- end section -->
 <!-- Modal -->
@@ -477,7 +474,7 @@
         <form action="#" method="post">
           <input required type="email">
           <label for="email">Email</label>
-          <input class="submit" type="submit" value=""><i class="fas fa-arrow-right" style="color: white;"></i>
+          <input class="submit" type="submit" value="">
         </form>
       </div>
       <div class="row">
@@ -507,7 +504,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
