--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
           <div class="full">
             <div class="topbar-left">
               <ul class="list-inline">
-                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span> <span class="topbar-hightlight">+1234567890</span> </li>
+                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span><a href="tel:+91-1234567890" class="smooth" title="" style="color: white;"><span class="topbar-hightlight">+1234567890</span></a> </li>
                 <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></span> </li>
               </ul>
             </div>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
           <!-- logo start -->
-          <div class="logo"> <a href="it_home.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
+          <div class="logo"> <a href="index.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
           <!-- logo end -->
         </div>
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -87,14 +87,20 @@
           <div class="menu_side">
             <div id="navbar_menu">
               <ul class="first-ul">
-                <li> <a class="active" href="index.html">Home</a></li>
+                <li> <a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li> <a href="service.html">Service</a>
-                  <!-- <ul>
-                  <li><a href="service_detail.html">Services Detail</a></li>
-                  </ul> -->
+                  <ul>
+                    <li><a href="#">Our Workshop</a></li>
+                    <li><a href="#">Machine Shop</a></li>
+                    <li><a href="#">Electrical Insulating Test</a></li>
+                    <li><a href="#">Our Site Repairs & Services</a></li>
+                    <li><a href="#">Spare Parts</a></li>
+                    <li><a href="#">Weight Test and Annual Inspections</a></li>
+                    <li><a href="#">24/7 Call out Service</a></li>
+                    </ul>
                 </li>
-                <li> <a href="contact.html">Contact</a></li>
+                <li> <a class="active" href="contact.html">Contact</a></li>
               </ul>
             </div>
             <div class="search_icon">
@@ -111,6 +117,8 @@
   <!-- header bottom end -->
 </header>
 <!-- end header -->
+<!--Back to top-->
+<div id="backtop">&#9650;</div>
 <!-- inner page banner -->
 <div id="inner_banner" class="section inner_banner_section">
   <div class="container">
@@ -180,16 +188,16 @@
                   <fieldset>
                   <div class="row">
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                      <input class="field_custom" placeholder="Websire URL" type="text">
+                      <input class="field_custom" placeholder="First Name" type="text">
                     </div>
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                      <input class="field_custom" placeholder="Your name" type="text">
+                      <input class="field_custom" placeholder="Last Name" type="text">
                     </div>
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                      <input class="field_custom" placeholder="Email adress" type="email">
+                      <input class="field_custom" placeholder="Email Address" type="email">
                     </div>
                     <div class="field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                      <input class="field_custom" placeholder="Phone number" type="text">
+                      <input class="field_custom" placeholder="Phone Number" type="text">
                     </div>
                     <div class="field col-lg-12 col-md-12 col-sm-12 col-xs-12">
                       <textarea class="field_custom" placeholder="Messager"></textarea>
@@ -291,21 +299,6 @@
 <!-- end section -->
 <!-- section -->
 <div class="section padding_layout_1" style="padding: 50px 0;">
-  <!-- <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="full">
-          <ul class="brand_list">
-            <li><img src="images/it_service/brand_icon1.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon2.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon3.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon4.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon5.png" alt="#" /></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
 <!-- end section -->
 <!-- Modal -->
@@ -344,7 +337,7 @@
         <form action="#" method="post">
           <input required type="email">
           <label for="email">Email</label>
-          <input class="submit" type="submit" value="">
+          <input class="submit" type="submit" value=""><i class="fas fa-arrow-right" style="color: white;"></i>
         </form>
       </div>
       <div class="row">
@@ -374,7 +367,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
@@ -390,6 +383,8 @@
 <script src="js/wow.js"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
+<!--Back to top-->
+<script src="js/float-panel.js"></script>
 <!-- revolution js files -->
 <script src="revolution/js/jquery.themepunch.tools.min.js"></script>
 <script src="revolution/js/jquery.themepunch.revolution.min.js"></script>
