--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="full">
             <div class="topbar-left">
               <ul class="list-inline">
-                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span> <span class="topbar-hightlight">+1234567890</span> </li>
+                <li> <span class="topbar-label"><i class="fa  fa-phone"></i></span><a href="tel:+91-1234567890" class="smooth" title="" style="color: white;"><span class="topbar-hightlight">+1234567890</span></a> </li>
                 <li> <span class="topbar-label"><i class="fa fa-envelope-o"></i></span> <span class="topbar-hightlight"><a href="mailto:info@yourdomain.com">info@yourdomain.com</a></span> </li>
               </ul>
             </div>
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
           <!-- logo start -->
-          <div class="logo"> <a href="it_home.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
+          <div class="logo"> <a href="index.html"><img src="images/logos/Logo-delmen.png" alt="logo" /></a> </div>
           <!-- logo end -->
         </div>
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -90,9 +90,15 @@
                 <li> <a class="active" href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li> <a href="service.html">Service</a>
-                  <!-- <ul>
-                  <li><a href="service_detail.html">Services Detail</a></li>
-                  </ul> -->
+                   <ul>
+                  <li><a href="#">Our Workshop</a></li>
+                  <li><a href="#">Machine Shop</a></li>
+                  <li><a href="#">Electrical Insulating Test</a></li>
+                  <li><a href="#">Our Site Repairs & Services</a></li>
+                  <li><a href="#">Spare Parts</a></li>
+                  <li><a href="#">Weight Test and Annual Inspections</a></li>
+                  <li><a href="#">24/7 Call out Service</a></li>
+                  </ul>
                 </li>
                 <li> <a href="contact.html">Contact</a></li>
               </ul>
@@ -111,6 +117,8 @@
   <!-- header bottom end -->
 </header>
 <!-- end header -->
+<!--Back to top-->
+<div id="backtop">&#9650;</div>
 <!-- section -->
 <div id="slider" class="section main_slider">
   <div class="container-fuild">
@@ -356,60 +364,6 @@
 </div>
 <!-- end section -->
 <!-- section -->
-<!-- <div class="section padding_layout_1">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="full">
-          <div class="main_heading text_align_center">
-            <h2>Why Choose Us</h2>
-            <p class="large">Fast and Reliable Services</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-        <div class="full text_align_center margin_bottom_30">
-          <div class="center">
-            <div class="icon"> <img src="images/it_service/i1.png" alt="#" /> </div>
-          </div>
-          <h4 class="theme_color">Data recovery</h4>
-          <p>Perspiciatis eos quos totam cum minima aut!</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-        <div class="full text_align_center margin_bottom_30">
-          <div class="center">
-            <div class="icon"> <img src="images/it_service/i2.png" alt="#" /> </div>
-          </div>
-          <h4 class="theme_color">Computer repair</h4>
-          <p>Perspiciatis eos quos totam cum minima aut!</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-        <div class="full text_align_center margin_bottom_30">
-          <div class="center">
-            <div class="icon"> <img src="images/it_service/i3.png" alt="#" /> </div>
-          </div>
-          <h4 class="theme_color">Mobile service</h4>
-          <p>Perspiciatis eos quos totam cum minima aut!</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-        <div class="full text_align_center margin_bottom_30 margin_0">
-          <div class="center">
-            <div class="icon"> <img src="images/it_service/i4.png" alt="#" /> </div>
-          </div>
-          <h4 class="theme_color">Network solutions</h4>
-          <p>Perspiciatis eos quos totam cum minima aut!</p>
-        </div>
-      </div>
-    </div>
-    </div>
-    </div> -->
-<!-- end section -->
-<!-- section -->
 <div class="section padding_layout_1 light_silver gross_layout">
   <div class="container">
     <div class="row">
@@ -509,9 +463,6 @@
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
             </div>
-            <div class="product_price">
-              <p><span class="old_price">$15.00</span> – <span class="new_price">$25.00</span></p>
-            </div>
           </div>
         </div>
       </div>
@@ -524,9 +475,6 @@
             </div>
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
-            </div>
-            <div class="product_price">
-              <p><span class="old_price">$24.99</span><span class="new_price"> $12.49</span></p>
             </div>
           </div>
         </div>
@@ -541,9 +489,6 @@
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
             </div>
-            <div class="product_price">
-              <p><span class="old_price">$24.99</span><span class="new_price"> $12.49</span></p>
-            </div>
           </div>
         </div>
       </div>
@@ -556,9 +501,6 @@
             </div>
             <div class="starratin">
               <div class="center"> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i> <i class="fa fa-star-o" aria-hidden="true"></i> </div>
-            </div>
-            <div class="product_price">
-              <p><span class="old_price">$15.00</span> – <span class="new_price">$25.00</span></p>
             </div>
           </div>
         </div>
@@ -653,21 +595,6 @@
 <!-- end section -->
 <!-- section -->
 <div class="section padding_layout_1" style="padding: 50px 0;">
-  <!-- <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="full">
-          <ul class="brand_list">
-            <li><img src="images/it_service/brand_icon1.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon2.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon3.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon4.png" alt="#" /></li>
-            <li><img src="images/it_service/brand_icon5.png" alt="#" /></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
 <!-- end section -->
 <!-- Modal -->
@@ -706,7 +633,7 @@
         <form action="#" method="post">
           <input required type="email">
           <label for="email">Email</label>
-          <input class="submit" type="submit" value="">
+          <input class="submit" type="submit" value=""><i class="fas fa-arrow-right" style="color: white;"></i>
         </form>
       </div>
       <div class="row">
@@ -736,7 +663,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <p class="designed">Designed by <a href="#" target="_blank">RSK Tech Labs</a></p>
+          <p class="designed">Designed by <a href="https://rsktechlabs.com/" target="_blank">RSK Tech Labs</a></p>
         </div>
       </div>
     </div>
@@ -752,6 +679,10 @@
 <script src="js/wow.js"></script>
 <!-- custom js -->
 <script src="js/custom.js"></script>
+
+<!--Back to top-->
+<script src="js/float-panel.js"></script>
+
 <!-- revolution js files -->
 <script src="revolution/js/jquery.themepunch.tools.min.js"></script>
 <script src="revolution/js/jquery.themepunch.revolution.min.js"></script>
