--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 </div>
 <!-- end section -->
 <!-- section -->
-<div class="section padding_layout_1 testmonial_section white_fonts">
+<div class="section padding_layout_1 testmonial_section white_fonts" style="background-image: url(images/Truck5.jpg);">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
